<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginRight="@dimen/_15sdp"
    android:layout_marginTop="@dimen/_15sdp"
    android:layout_marginBottom="@dimen/_15sdp"
    tools:context=".DetailMovieActivity"
    >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtOriTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/original_title"
            android:textSize="@dimen/_10sdp"
            android:layout_gravity="center"
            android:textColor="@color/blue2"/>

        <TextView
            android:id="@+id/txtOriginalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/app_name"
            android:textSize="@dimen/_10sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="center"
                android:textColor="@color/blue2"/>

            <TextView
                android:id="@+id/txtLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/app_name"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="center"
                android:textColor="@color/red"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap">

            <ImageView
                android:id="@+id/star"
                android:layout_width="@dimen/_13sdp"
                android:layout_height="@dimen/_13sdp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/outline_star_24"
                android:layout_gravity="center"
                android:contentDescription="@string/rating" />

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/app_name"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/txtVote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp" />

        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginBottom="@dimen/_7sdp"/>

    <TextView
        android:id="@+id/txtOverview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_weight="1"
        android:justificationMode="inter_word"
        android:text="@string/app_name"
        android:textSize="@dimen/_10sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/btnAddMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_bookmark"
            android:onClick="addMovie"/>
        <Button
            android:id="@+id/btnRemoveMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="removeMovie"
            android:text="@string/remove_from_bookmark"
            android:backgroundTint="@color/red"/>

        <Button
            android:id="@+id/btnShowBookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_bookmark"
            android:onClick="showBookmark"/>

        <TextView
            android:id="@+id/txtId"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/app_name"
            android:textSize="@dimen/_10sdp"
            />
    </LinearLayout>
</LinearLayout>